<?xml version="1.0"?>
<package format="2">
  <name>eigen3_cmake_module</name>
  <version>0.3.0</version>
  <description>Exports a custom CMake module to find Eigen3.</description>

  <maintainer email="scott@openrobotics.org">Scott K Logan</maintainer>

  <author email="brandon@openrobotics.org">Brandon Ong</author>
  <author email="sloretz@openrobotics.org">Shane Loretz</author>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_cmake_copyright</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
